@@ -3,6 +3,7 @@ Version 1.1.7 (released ??-???-????)
   * display Subversion revision properties in the revision view (issue #453)
   * fix exception in 'standalone.py -r REPOS' when run without a config file
   * fix standalone.py server root deployments (--script-alias='')
+  * add rudimentary Basic authentication support to standalone.py (issue #49)
 
 Version 1.1.6 (released 02-Jun-2010)
 
